docs/4.x/generated/Classnames.md

## API\Request
## Access
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## Archive\ArchiveInvalidator
## AuthResult
## Auth\Password
## Category\Subcategory
## Columns\ComputedMetricFactory
## Columns\Dimension
## Columns\DimensionMetricFactory
## Columns\DimensionSegmentFactory
## Columns\Discriminator
## Columns\Join
## Columns\Join\ActionNameJoin
## Columns\Join\GoalNameJoin
## Columns\Join\SiteNameJoin
## Columns\MetricsList
## Columns\Updater
## Common
## Config
## DataAccess\LogAggregator
## DataTable
## DataTable\BaseFilter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSegmentByLabel
## DataTable\Filter\AddSegmentByLabelMapping
## DataTable\Filter\AddSegmentByRangeLabel
## DataTable\Filter\AddSegmentBySegmentValue
## DataTable\Filter\AddSegmentValue
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnCallbackReplace
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\PrependSegment
## DataTable\Filter\PrependValueToMetadata
## DataTable\Filter\RemoveSubtables
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## DbHelper
## Filesystem
## FrontController
## Http
## IP
## Intl\Data\Provider\CurrencyDataProvider
## Intl\Data\Provider\LanguageDataProvider
## Intl\Data\Provider\RegionDataProvider
## Log
## Mail
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuTop
## Metrics
## Metrics\Formatter
## Metrics\Formatter\Html
## NoAccessException
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\AggregatedMetric
## Plugin\Archiver
## Plugin\Controller
## Plugin\ControllerAdmin
## Plugin\Dimension\ActionDimension
## Plugin\Dimension\ConversionDimension
## Plugin\Dimension\VisitDimension
## Plugin\Manager
## Plugin\Menu
## Plugin\Metric
## Plugin\ProcessedMetric
## Plugin\Report
## Plugin\ReportsProvider
## Plugin\Segment
## Plugin\SettingsProvider
## Plugin\Tasks
## Plugin\ViewDataTable
## Plugin\Visualization
## Plugins\AbTesting\Columns\Metrics\AverageMoney
## Plugins\AbTesting\Columns\Metrics\AverageValue
## Plugins\AbTesting\Columns\Metrics\AverageVisitLength
## Plugins\AbTesting\Columns\Metrics\BounceRate
## Plugins\AbTesting\Columns\Metrics\ConversionRate
## Plugins\AbTesting\Columns\Metrics\DetectedEffect
## Plugins\AbTesting\Columns\Metrics\ProcessedMetric
## Plugins\AbTesting\Columns\Metrics\RemainingVisitors
## Plugins\AbTesting\Columns\Metrics\SignificanceRate
## Plugins\AbTesting\Columns\Metrics\TotalMoney
## Plugins\Actions\Columns\Metrics\AveragePageGenerationTime
## Plugins\Actions\Columns\Metrics\AverageTimeOnPage
## Plugins\Actions\Columns\Metrics\BounceRate
## Plugins\Actions\Columns\Metrics\ExitRate
## Plugins\Bandwidth\Columns\Metrics\AvgBandwidth
## Plugins\Bandwidth\Columns\Metrics\Base
## Plugins\Bandwidth\Columns\Metrics\DownloadBandwidth
## Plugins\Bandwidth\Columns\Metrics\HitsWithBandwidth
## Plugins\Bandwidth\Columns\Metrics\MaxBandwidth
## Plugins\Bandwidth\Columns\Metrics\MinBandwidth
## Plugins\Bandwidth\Columns\Metrics\OverallBandwidth
## Plugins\Bandwidth\Columns\Metrics\PageviewBandwidth
## Plugins\Bandwidth\Columns\Metrics\SumBandwidth
## Plugins\Cohorts\Columns\Metrics\CohortTableColumn
## Plugins\Cohorts\Columns\Metrics\VisitorRetentionPercent
## Plugins\Cohorts\Visualizations\Cohorts\Config
## Plugins\Contents\Columns\Metrics\InteractionRate
## Plugins\CoreHome\Columns\Metrics\ActionsPerVisit
## Plugins\CoreHome\Columns\Metrics\AverageTimeOnSite
## Plugins\CoreHome\Columns\Metrics\BounceRate
## Plugins\CoreHome\Columns\Metrics\CallableProcessedMetric
## Plugins\CoreHome\Columns\Metrics\ConversionRate
## Plugins\CoreHome\Columns\Metrics\EvolutionMetric
## Plugins\CoreHome\Columns\Metrics\VisitsPercent
## Plugins\CoreHome\SystemSummary\Item
## Plugins\CoreVisualizations\Metrics\Formatter\Numeric
## Plugins\CoreVisualizations\Visualizations\Cloud\Config
## Plugins\CoreVisualizations\Visualizations\Graph\Config
## Plugins\CoreVisualizations\Visualizations\HtmlTable\Config
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Config
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Evolution\Config
## Plugins\CoreVisualizations\Visualizations\Sparklines\Config
## Plugins\CustomDimensions\Columns\Metrics\AverageTimeOnDimension
## Plugins\CustomDimensions\Dimension\Name
## Plugins\CustomJsTracker\TrackerUpdater
## Plugins\DevicePlugins\DevicePlugins
## Plugins\Diagnostics\DiagnosticService
## Plugins\Diagnostics\Diagnostic\DiagnosticResult
## Plugins\Diagnostics\Diagnostic\DiagnosticResultItem
## Plugins\Events\Columns\Metrics\AverageEventValue
## Plugins\FormAnalytics\Columns\Metrics\FieldAvgHesitationTime
## Plugins\FormAnalytics\Columns\Metrics\FieldAvgSizeConverted
## Plugins\FormAnalytics\Columns\Metrics\FieldAvgSizeOverall
## Plugins\FormAnalytics\Columns\Metrics\FieldAvgSizeSubmitted
## Plugins\FormAnalytics\Columns\Metrics\FieldAvgTimeSpent
## Plugins\FormAnalytics\Columns\Metrics\FieldRateAmendment
## Plugins\FormAnalytics\Columns\Metrics\FieldRateCursors
## Plugins\FormAnalytics\Columns\Metrics\FieldRateDeletes
## Plugins\FormAnalytics\Columns\Metrics\FieldRateLeftBlankConversion
## Plugins\FormAnalytics\Columns\Metrics\FieldRateLeftBlankSubmit
## Plugins\FormAnalytics\Columns\Metrics\FieldRateRefocus
## Plugins\FormAnalytics\Columns\Metrics\FieldSumHesitationTime
## Plugins\FormAnalytics\Columns\Metrics\FieldSumInteractionUnsubmitted
## Plugins\FormAnalytics\Columns\Metrics\FieldSumTimeSpent
## Plugins\FormAnalytics\Columns\Metrics\FormAvgHesitationTime
## Plugins\FormAnalytics\Columns\Metrics\FormAvgTimeSpent
## Plugins\FormAnalytics\Columns\Metrics\FormAvgTimeToConversion
## Plugins\FormAnalytics\Columns\Metrics\FormAvgTimeToFirstSubmission
## Plugins\FormAnalytics\Columns\Metrics\FormRateConversion
## Plugins\FormAnalytics\Columns\Metrics\FormRateResubmitter
## Plugins\FormAnalytics\Columns\Metrics\FormRateStarters
## Plugins\FormAnalytics\Columns\Metrics\FormRateSubmitter
## Plugins\Funnels\Columns\Metrics\AbandonedRate
## Plugins\Funnels\Columns\Metrics\ConversionRate
## Plugins\Funnels\Columns\Metrics\ProceededRate
## Plugins\Goals\Columns\Metrics\AverageOrderRevenue
## Plugins\Goals\Columns\Metrics\AveragePrice
## Plugins\Goals\Columns\Metrics\AverageQuantity
## Plugins\Goals\Columns\Metrics\GoalConversionRate
## Plugins\Goals\Columns\Metrics\GoalSpecificProcessedMetric
## Plugins\Goals\Columns\Metrics\GoalSpecific\AverageOrderRevenue
## Plugins\Goals\Columns\Metrics\GoalSpecific\ConversionEntryRate
## Plugins\Goals\Columns\Metrics\GoalSpecific\ConversionPageRate
## Plugins\Goals\Columns\Metrics\GoalSpecific\ConversionRate
## Plugins\Goals\Columns\Metrics\GoalSpecific\Conversions
## Plugins\Goals\Columns\Metrics\GoalSpecific\ConversionsAttrib
## Plugins\Goals\Columns\Metrics\GoalSpecific\ConversionsEntry
## Plugins\Goals\Columns\Metrics\GoalSpecific\ItemsCount
## Plugins\Goals\Columns\Metrics\GoalSpecific\Revenue
## Plugins\Goals\Columns\Metrics\GoalSpecific\RevenueAttrib
## Plugins\Goals\Columns\Metrics\GoalSpecific\RevenueEntry
## Plugins\Goals\Columns\Metrics\GoalSpecific\RevenuePerEntry
## Plugins\Goals\Columns\Metrics\GoalSpecific\RevenuePerVisit
## Plugins\Goals\Columns\Metrics\ProductConversionRate
## Plugins\Goals\Columns\Metrics\RevenuePerVisit
## Plugins\HeatmapSessionRecording\Columns\Metrics\BaseMetric
## Plugins\HeatmapSessionRecording\Columns\Metrics\Browser
## Plugins\HeatmapSessionRecording\Columns\Metrics\Device
## Plugins\HeatmapSessionRecording\Columns\Metrics\Location
## Plugins\HeatmapSessionRecording\Columns\Metrics\OperatingSystem
## Plugins\HeatmapSessionRecording\Columns\Metrics\SessionTime
## Plugins\HeatmapSessionRecording\Columns\Metrics\TimeOnPage
## Plugins\HeatmapSessionRecording\Columns\Metrics\TimeOnSite
## Plugins\Live\ProfileSummaryProvider
## Plugins\Live\ProfileSummary\ProfileSummaryAbstract
## Plugins\Live\Visitor
## Plugins\Live\VisitorDetailsAbstract
## Plugins\Live\Visualizations\VisitorLog\Config
## Plugins\MediaAnalytics\Columns\Metrics\AvgMediaCompletion
## Plugins\MediaAnalytics\Columns\Metrics\AvgMediaLength
## Plugins\MediaAnalytics\Columns\Metrics\AvgSecondsMetric
## Plugins\MediaAnalytics\Columns\Metrics\AvgTimeToPlay
## Plugins\MediaAnalytics\Columns\Metrics\AvgTimeWatched
## Plugins\MediaAnalytics\Columns\Metrics\FinishRate
## Plugins\MediaAnalytics\Columns\Metrics\FullscreenRate
## Plugins\MediaAnalytics\Columns\Metrics\ImpressionRate
## Plugins\MediaAnalytics\Columns\Metrics\PlayRate
## Plugins\MediaAnalytics\Columns\Metrics\SegmentPlayRate
## Plugins\MobileMessaging\SMSProvider
## Plugins\MultiChannelConversionAttribution\Columns\Metrics\AttributionComparison
## Plugins\MultiChannelConversionAttribution\Columns\Metrics\Conversion
## Plugins\MultiChannelConversionAttribution\Columns\Metrics\Revenue
## Plugins\MultiSites\Columns\Metrics\EcommerceOnlyEvolutionMetric
## Plugins\PagePerformance\Columns\Metrics\AveragePageLoadTime
## Plugins\PagePerformance\Columns\Metrics\AveragePerformanceMetric
## Plugins\PagePerformance\Columns\Metrics\AverageTimeDomCompletion
## Plugins\PagePerformance\Columns\Metrics\AverageTimeDomProcessing
## Plugins\PagePerformance\Columns\Metrics\AverageTimeNetwork
## Plugins\PagePerformance\Columns\Metrics\AverageTimeOnLoad
## Plugins\PagePerformance\Columns\Metrics\AverageTimeServer
## Plugins\PagePerformance\Columns\Metrics\AverageTimeTransfer
## Plugins\TagManager\MenuTagManager
## Plugins\TagManager\Template\BaseTemplate
## Plugins\TagManager\Template\Tag\BaseTag
## Plugins\TagManager\Template\Trigger\BaseTrigger
## Plugins\TagManager\Template\Variable\BaseVariable
## Plugins\Tour\Engagement\Challenge
## Plugins\TreemapVisualization\TreemapConfig
## Plugins\UsersFlow\Columns\Metrics\ExitRate
## Plugins\UsersFlow\Columns\Metrics\Proceeded
## Plugins\UsersFlow\Columns\Metrics\ProceededRate
## Plugins\UsersManager\UserPreferences
## Plugins\VisitFrequency\Columns\Metrics\ReturningMetric
## RankingQuery
## Report\ReportWidgetConfig
## Report\ReportWidgetFactory
## Scheduler\Schedule\Daily
## Scheduler\Schedule\Hourly
## Scheduler\Schedule\Monthly
## Scheduler\Schedule\Schedule
## Scheduler\Schedule\SpecificTime
## Scheduler\Schedule\Weekly
## Scheduler\Scheduler
## Scheduler\Task
## Segment
## Segment\SegmentsList
## SettingsPiwik
## SettingsServer
## Settings\FieldConfig
## Settings\FieldConfig\ArrayField
## Settings\FieldConfig\MultiPair
## Settings\Plugin\SystemConfigSetting
## Settings\Plugin\SystemSetting
## Settings\Setting
## Settings\Settings
## Singleton
## Site
## Translation\Translator
## Updater
## Updater\Migration
## Updater\Migration\Config\Factory
## Updater\Migration\Custom
## Updater\Migration\Db
## Updater\Migration\Db\Factory
## Updater\Migration\Factory
## Updater\Migration\Plugin\Factory
## Updates
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Config
## ViewDataTable\Factory
## ViewDataTable\RequestConfig
## View\SecurityPolicy
## View\UIControl
## Widget\Widget
## Widget\WidgetConfig
## Widget\WidgetContainerConfig
## Widget\WidgetsList
